k8s-ingress/f5-cis/namespaces-isolation/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cis_scanner_zone: zone_1
  name: cistest100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: cistest100
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: cloudadc/cafe:1.0
        name: backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
    cis.f5.com/as3-tenant: cistest100
    cis.f5.com/as3-app: cistest100
    cis.f5.com/as3-pool: cistest100_app_svc_pool
  name: app-svc
  namespace: cistest100
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cis_scanner_zone: zone_1
  name: cistest101
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: cistest101
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: cloudadc/cafe:1.0
        name: backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
    cis.f5.com/as3-tenant: cistest101
    cis.f5.com/as3-app: cistest101
    cis.f5.com/as3-pool: cistest101_app_svc_pool
  name: app-svc
  namespace: cistest101
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cis_scanner_zone: zone_1
  name: cistest102
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: cistest102
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: cloudadc/cafe:1.0
        name: backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
    cis.f5.com/as3-tenant: cistest102
    cis.f5.com/as3-app: cistest102
    cis.f5.com/as3-pool: cistest102_app_svc_pool
  name: app-svc
  namespace: cistest102
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Namespace
metadata:
  name: cistest103
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: cistest103
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: cloudadc/cafe:1.0
        name: backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
    cis.f5.com/as3-tenant: cistest103
    cis.f5.com/as3-app: cistest103
    cis.f5.com/as3-pool: cistest103_app_svc_pool
  name: app-svc
  namespace: cistest103
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
